styling issues, save button visible

--- a/grid/css/muuri.less
+++ b/grid/css/muuri.less
@@ -143,11 +143,6 @@
             padding:0;
         }
 
-        &.wpsi-settings {
-            .item-container {
-                min-height: 550px;
-            }
-        }
     }
 
 }
